# doltclaw

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  doltclaw.toml  pawan.toml
.github/workflows/: pages.yml
docs/: config.toml
docs/content/: api.md  guide.md
docs/templates/: base.html  index.html
src/: agent.rs  builtin_tools.rs  config.rs  lib.rs  main.rs  tools.rs  types.rs
src/backend/: mod.rs  openai_compat.rs
