[package]
name = "doltclaw"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dirmacs/doltclaw"
authors = ["Dirmacs <build@dirmacs.com>"]
description = "Minimal agent runtime: LLM inference, model fallback, tool calling"

[lib]
name = "doltclaw"
path = "src/lib.rs"

[[bin]]
name = "doltclaw"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap", "dep:tracing-subscriber", "dep:dotenvy"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# CLI only
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }
dotenvy = { version = "0.15", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
